dualstack-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dualstack-test
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    run: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
