web-app-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-1
spec:
  selector:
    matchLabels:
      app: web-app-1
  template:
    metadata:
      labels:
        app: web-app-1
    spec:
      containers:
        - name: web-app
          image: hashicorp/http-echo:latest
          args:
            - "-text=hello from web-app 1"
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-1-service
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: web-app-1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5678
